--- a/home.html
+++ b/home.html
@@ -34,11 +34,12 @@
                     <a href="">Projects</a>
                 </li>
                 <li>
-                    <a href="">Extra</a>
+                    <a href="Contact.html">Contact </a>
                 </li>
             </ul>
         </nav>
     </header>
+
     <div class="squareBox">
 
     </div>
